--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" href="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/carousel.js">
 		<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<link rel="stylesheet" href="geofferdean.github.io/resources/style2.css">
+		<link rel="stylesheet" href="https://geofferdean.github.io/resources/style2.css">
 
 	</head>
 			<header>
