--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 <!-- hero image -->
 
 		<div class="parallax">
-		<img class="logo_small" src="/Users/geoffreyjensen/Documents/_General Assembly/projects/Portfolio/logobackground.svg" alt="">
-		<img class="logo_2" src="/Users/geoffreyjensen/Documents/_General Assembly/projects/Portfolio/logobackground.svg" alt=""></div>
+		<img class="logo_small" src="https://geofferdean.github.io/logobackground.svg" alt="">
+		<img class="logo_2" src="https://geofferdean.github.io/logobackground.svg" alt=""></div>
 
 <!-- main content -->
 		<div class="gdj">
