--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
   	integrity="sha256-e9gNBsAcA0DBuRWbm0oZfbiCyhjLrI6bmqAl5o+ZjUA="
 		crossorigin="anonymous"></script>
 
-		<script src="/Users/geoffreyjensen/Documents/_General Assembly/projects/Portfolio/logobig.js">
+		<script src="https://geofferdean.github.io/logobig.js">
 
 		</script>
 
