--- a/index.html
+++ b/index.html
@@ -458,11 +458,11 @@
 
 
 
-		<script src="/Users/geoffreyjensen/Documents/_General Assembly/projects/Portfolio/revealdesign.js">
+		<script src="https://geofferdean.github.io/revealdesign.js">
 		</script>
-		<script src="/Users/geoffreyjensen/Documents/_General Assembly/Projects/Portfolio/revealabout.js">
+		<script src="/https://geofferdean.github.io/revealabout.js">
 		</script>
-		<script src="/Users/geoffreyjensen/Documents/_General Assembly/Projects/Portfolio/artreveal.js">
+		<script src="https://geofferdean.github.io/artreveal.js">
 
 		</script>
 		<script src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/startbootstrap-scrolling-nav-gh-pages/vendor/jquery/jquery.min.js">
