--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@
 		<script src="https://geofferdean.github.io/artreveal.js">
 
 		</script>
-		<script src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/startbootstrap-scrolling-nav-gh-pages/vendor/jquery/jquery.min.js">
+		<script src="https://geofferdean.github.io/startbootstrap-scrolling-nav-gh-pages/vendor/jquery/jquery.min.js">
 		</script>
-		<script src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/startbootstrap-scrolling-nav-gh-pages/vendor/bootstrap/js/bootstrap.bundle.min.js">
+		<script src="https://geofferdean.github.io/startbootstrap-scrolling-nav-gh-pages/vendor/bootstrap/js/bootstrap.bundle.min.js">
 		</script>
-		<script src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/startbootstrap-scrolling-nav-gh-pages/vendor/jquery-easing/jquery.easing.min.js">
+		<script src="https://geofferdean.github.io/startbootstrap-scrolling-nav-gh-pages/vendor/jquery-easing/jquery.easing.min.js">
 		</script>
-		<script src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/startbootstrap-scrolling-nav-gh-pages/js/scrolling-nav.js">
+		<script src="https://geofferdean.github.io/startbootstrap-scrolling-nav-gh-pages/js/scrolling-nav.js">
 		</script>
 		<script
   	src="https://code.jquery.com/jquery-1.9.1.js"
