--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									</div>
 
 									<div class="child bubble_nest">
-										<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/bubblenest.svg" alt="bubblenest">
+										<img src="https://geofferdean.github.io/bubblenest.svg" alt="bubblenest">
 									</div>
 
 									<div class="child slide_2 text-left">
@@ -144,12 +144,12 @@
 											<p>My initial leanings were to use more imagery and create an infographic (which I eventually did) that also had quantifiable data, but this did not exactly suit the needs of my proto-persona. I searched online for other data visualizations and found a wide variety of them, but they were either very confusing or not particularly interesting to look at.
 											</p>
 											<div class="infog">
-												<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/infographic.svg" class="infog"alt="">
+												<img src="https://geofferdean.github.io/infographic.svg" class="infog"alt="">
 											</div>
 										</div>
 										<div class="child slide_3 bubble_nest_2">
 											<h3>Iteration</h3>
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/bubblenest.svg" alt="">
+											<img src="https://geofferdean.github.io/bubblenest.svg" alt="">
 											<h4>Nesting Bubble Chart:<br>All Souls Aboard</h4>
 											<div class="row supp">
 												<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/bubblenest2.svg"class="supp" alt="">
@@ -460,7 +460,7 @@
 
 		<script src="https://geofferdean.github.io/revealdesign.js">
 		</script>
-		<script src="/https://geofferdean.github.io/revealabout.js">
+		<script src="https://geofferdean.github.io/revealabout.js">
 		</script>
 		<script src="https://geofferdean.github.io/artreveal.js">
 
