add more images

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 											<img src="https://geofferdean.github.io/bubblenest.svg" alt="">
 											<h4>Nesting Bubble Chart:<br>All Souls Aboard</h4>
 											<div class="row supp">
-												<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/bubblenest2.svg"class="supp" alt="">
-												<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/bubblenest3.svg"class="supp" alt="">
+												<img src="https://geofferdean.github.io/bubblenest2.svg"class="supp" alt="">
+												<img src="https://geofferdean.github.io/bubblenest3.svg"class="supp" alt="">
 											</div>
 										</div>
 										<div class="child slide_3">
@@ -163,7 +163,7 @@
 										</div>
 										<div class="child slide_3 rose_2">
 											<h3>Nightingale Rose Chart</h3>
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/rosechart.svg" alt="">
+											<img src="https://geofferdean.github.io/rosechart.svg" alt="">
 											<p></p>
 											<p></p>
 										</div>
@@ -174,7 +174,7 @@
 											</p>
 										</div>
 										<div class="child slide_3 radial">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/radialchart.svg" alt="">
+											<img src="https://geofferdean.github.io/radialchart.svg" alt="">
 
 										</div>
 										<div class="child slide_3">
