added all images

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 										<p>I am a hyper-aware UX designer who strives to glean and retain information that is pertinent to the quest of communicating the language of the soul. I love creating beautiful designs that curate ideas eloquently in a manner unexpected, yet familiar. My creative passion inspires meaningful and streamlined  user experiences, perpetuating new methods of communication and deepening the relationship between the tangible and digital worlds.</p>
 									</div>
 									<div class="child slide_3 history">
-										<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/gdjsnow.png" alt="">
+										<img src="https://geofferdean.github.io/gdjsnow.png" alt="">
 										<h3>Geoffrey Dean: A Brief Synopsis</h3>
 										<p>	The creative spirit has made me innovative. I continue to find new ways to utilize art forms that have gone by the wayside in the wake of the digital age.
 										</p>
@@ -253,19 +253,19 @@
 									<div class="child fun">
 											<div class="grid">
 												<div class="grid-item">
-													<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/bread.png" alt="bread">
+													<img src="https://geofferdean.github.io/bread.png" alt="bread">
 												</div>
 												<div class="grid-item">
-													<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/con.png" alt="rincon">
+													<img src="https://geofferdean.github.io/con.png" alt="rincon">
 												</div>
 
 											</div>
 											<div class="grid">
 												<div class="grid-item">
-													<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/cableknit.png" alt="cableknitting">
+													<img src="https://geofferdean.github.io/cableknit.png" alt="cableknitting">
 												</div>
 												<div class="grid-item">
-													<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/wolf.png" alt="wolf">
+													<img src="https://geofferdean.github.io/wolf.png" alt="wolf">
 												</div>
 
 										</div>
@@ -326,44 +326,44 @@
 
 
 										<div class="child gallery">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/cassady hero real.png" alt="">
+											<img src="https://geofferdean.github.io/cassady hero real.png" alt="">
 											<h4>Cassady</h4>
 											<p>Digital Drawing</p>
 
 
 										</div>
 										<div class="child gallery">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/xarnetta.png">
+											<img src="https://geofferdean.github.io/xarnetta.png">
 											<h4>Arnetta</h4>
 											<p>Polaroid Transfer</p>
 										</div>
 										<div class="child gallery">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/xjulie.png">
+											<img src="https://geofferdean.github.io/xjulie.png">
 											<h4>Our Lady Julie</h4>
 											<p>Polaroid Transfer</p>
 										</div>
 										<div class="child gallery">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/xsilverplume.png">
+											<img src="https://geofferdean.github.io/xsilverplume.png">
 											<h4>Datsun: Silver Plume</h4>
 											<p>35mm film</p>
 										</div>
 										<div class="child gallery">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/xrichard.png">
+											<img src="https://geofferdean.github.io/xrichard.png">
 											<h4>Richard, the Birthday Scrub Jay</h4>
 											<p>35mm film</p>
 										</div>
 										<div class="child gallery">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/xjames.png">
+											<img src="https://geofferdean.github.io/xjames.png">
 											<h4>James</h4>
 											<p>Polaroid Transfer</p>
 										</div>
 										<div class="child gallerylg">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/xgiudecca.png">
+											<img src="https://geofferdean.github.io/xgiudecca.png">
 											<h4>Giudecca Demolition</h4>
 											<p>35mm film</p>
 										</div>
 										<div class="child gallerylg">
-											<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/xoldman.png">
+											<img src="https://geofferdean.github.io/xoldman.png">
 											<h4>Walking Companions</h4>
 											<p>35mm film</p>
 										</div>
@@ -388,7 +388,7 @@
 						<div class="row">
 							<div class="col-sm-6 text-center resume">
 								<h2>Resumé</h2>
-								<img src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/resumehtmltrue.svg" alt="">
+								<img src="https://geofferdean.github.io/resumehtmltrue.svg" alt="">
 								<a href="#"><h3>view .pdf</h3></a>
 
 							</div>
