--- a/index.html
+++ b/index.html
@@ -385,26 +385,37 @@
 							</div>
 					</div>
 					<section id="contact" class="banner_contact">
-						<div class="row">
-							<div class="col-sm-6 text-center resume">
+						<div class="row_2">
+							<div class="resume1">
 								<h2>Resumé</h2>
+								<a href="#"><h4>view .pdf</h4></a>
 								<img src="https://geofferdean.github.io/resumehtmltrue.svg" alt="">
-								<a href="#"><h3>view .pdf</h3></a>
+
+							</div>
+							<div class="links2">
+
+
+							</div>
+							<!--<div class="resume">
+								<h2>Resumé</h2>
+								<a href="#"><h4>view .pdf</h4></a>
+								<img src="https://geofferdean.github.io/resumehtmltrue.svg" alt="">
+
 
 							</div>
 
-								<div class="col-sm-6 text-left links">
-									<h2>Contact Me:</h2>
+								<div class="links2">
+									<h2>Contact Me</h2>
 									<h3>digby@geoffreydean.net</h3>
-									<h2>Media:</h2>
+									<h2>Media</h2>
 									<a href="https://www.linkedin.com/geoffrey-jensen"><h3>LinkedIn</h3></a>
 									<a href="https://medium.com/@geoffreydeanjensen"><h3>Blog</h3></a>
 									<a href="https://www.instagram.com/geofferdean/"><h3>Instagram</h3></a>
-									<h2>Other Projects:</h2>
+									<h2>Other Projects</h2>
 									<a href="https://www.whatsyourfavoritedinosaur.com"><h3>What's Your Favorite Dinosaur</h3></a>
 									<a href="https://www.instagram.com/gratefuldata/"><h3>Grateful Data</h3></a>
 									<h4>Thanks so much for stopping by!<br>I hope you like what you've seen.</h4>
-								</div>
+								</div>-->
 
 
 
