--- a/index.html
+++ b/index.html
@@ -25,14 +25,8 @@
 		<link rel="stylesheet" href="https://geofferdean.github.io/resources/style2.css">
 
 	</head>
-			<header>
 
-			</header>
-			<!--<img class="logo" src="https://lh3.googleusercontent.com/Sdr9xgpp8YePd_IWpbWrYKEl1HYECMTjs_73JiRVoU60ppJo6secH3pqMxfYFcticVKVXNIi2q-HJ_TlAkZ0fO2Oyo0LaNbw5SfuUfuj7uJhy4oiwFlO9MUzl6wJkmsvs8JJYwkjEw=w2400" />-->
-			<!--<a href="#top"><img class="logo" src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/resources/gdjpatch.svg"></a>-->
-			<!--<img class="logo" src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/gdjsolid.svg">-->
-			<!--<img class="logo" src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/logobackground.svg" alt="">-->
-			<!--<img class="true" src="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/bannertrue.svg" alt="">-->
+
 
 			<div class="home_link fixed-top">
 				<a class="home_link js-scroll-trigger"href="#nav">-</a>
@@ -63,14 +57,16 @@
 <!-- hero image -->
 
 		<div class="parallax">
-		<img class="logo_small" src="https://geofferdean.github.io/logobackground.svg" alt="">
-		<img class="logo_2" src="https://geofferdean.github.io/logobackground.svg" alt=""></div>
-
-<!-- main content -->
-		<div class="gdj">
-			<h1>GEOFFREY DEAN JENSEN</h1>
-			<h3>UX Designer on a quest to learn the language of the soul.</h3>
-			<a href="#design" class="js-scroll-trigger"><svg class="lnr lnr-chevron-down-circle"><use xlink:href="#lnr-chevron-down-circle"></use></svg> </a>
+			<div class="fixedlogo">
+				<img class="logo_small" src="https://geofferdean.github.io/logobackground.svg" alt="">
+				<img class="logo_2" src="https://geofferdean.github.io/logobackground.svg" alt="">
+			</div>
+	<!-- main content -->
+				<div class="gdj">
+					<h1>GEOFFREY DEAN JENSEN</h1>
+					<h3>UX Designer on a quest to learn the language of the soul.</h3>
+					<a href="#design" class="js-scroll-trigger"><svg class="lnr lnr-chevron-down-circle"><use xlink:href="#lnr-chevron-down-circle"></use></svg> </a>
+				</div>
 		</div>
 
 		<!-- design section -->
@@ -190,8 +186,125 @@
 					</div>
 					</div>
 				</section>
+		</section>
+		<section class="parallax_design">
+				<div class="spacer_design">
+					<div class="second">
+						<!--<h2>Design</h2>-->
+					</div>
+				</div>
 
-				<section class="banner parallax_about">
+				<section id="design">
+					<div class="banner_design">
+						<div class="section-background">
+							<div class="container_2">
+								<div class="content-wrapper">
+
+									<div class="child slide_1">
+										<h2>DATA VISUALIZATION<br>CASE STUDY</h2>
+
+									</div>
+
+									<div class="child bubble_nest">
+										<img src="https://geofferdean.github.io/bubblenest.svg" alt="bubblenest">
+									</div>
+
+									<div class="child slide_2 text-left">
+										<div>
+											<h3>Visualizing the Manifest of R.M.S. Titanic</h3>
+											<p>These data visualizations were created in order to give the user a fresh perspective on data they may have seen in tables or simple charts many times before. The data is visualized in a way that is aesthetically appealing while also informative; in its interactive capabilities, the user has the ability to view the same data visualized in multiple ways.
+											</p>
+										</div>
+									</div>
+
+
+									<div class="child slide_2 text-left">
+										<div class="wild_child">
+											<div>
+												<h3>I accomplished this project by:</h3>
+												<p>Using the Lean UX method<br>
+														Developing Proto-Personas<br>
+														Analyzing Data<br>
+														Comparative Analysis<br>
+														Ideating<br>
+														Iterating<br>
+														Reiterating<br>
+												</p>
+											</div>
+
+										</div>
+									</div>
+
+										<div class="child slide_3 text-left">
+											<h3>Developing a Proto-Persona</h3>
+											<p>The initial decision of visualizing this data was based on a proto-persona I developed, who is an ocean-liner enthusiast. Lefty has a particular penchant for the Titanic, owing to the fact that she was the subject of the only book he owned as a child, given to him by a pastry chef who worked on the Queen Mary. He read it so many times that he became the neighborhood Titanic expert. </p>
+											<p>He refers to his memory bank as a Rolo-dex, and while all of the data has resided there at one time or another, he’s getting old and wants a new way to look at data concerning his passion. While he can rattle off statistics about notable passengers, he’s more interested in the crew, primarily showing people how the crew made up almost half of the entire casualties in the disaster.
+											</p>
+											<p>After developing this proto-persona, I realized that he appreciates the complexity that can be represented by graphs, and that he would like to be able to show comparisons and see the data organized in a way that is different from the book he cherished as a young man.</p>
+										</div>
+
+										<div class="child rose slide_3">
+											<h3>Inspiration and Process</h3>
+											<img src="https://lh3.googleusercontent.com/LpqO2CQFJ0tBXzWu7fLgbeKdR5Uyfdb51AQJDaINs2SzR1k-MgbXtiRN1UW-LYvx7qrdzgB4WOCCCxhbXKIW9J-mR4YdrWggUSSCSxZ9q-SMLMQLHWq3rlB1kN9HdNMo0yeWTqIguQ=w2400" class="rose" alt="">
+											<p>I was heavily inspired in the visualization process by Florence Nightingale’s chart of the causes of death in the Crimean War, and by Tableau’s bubble charts. I had also seen some radial bar charts, which to me seemed a more interesting way of showing data as opposed to a standard bar graph.</p>
+										</div>
+
+
+										<div class="child slide_3">
+											<h3>Data Analysis</h3>
+											<p>After analyzing a public domain data set of R.M.S. Titanic’s passenger list, I realized that a list of the crew was not included. It was important to me to include these statistics, as the crew made up a considerable portion of the people on board, and also significantly impacted the percentage of total lives lost in the maritime disaster.</p>
+											<h3>Ideation</h3>
+											<p>My initial leanings were to use more imagery and create an infographic (which I eventually did) that also had quantifiable data, but this did not exactly suit the needs of my proto-persona. I searched online for other data visualizations and found a wide variety of them, but they were either very confusing or not particularly interesting to look at.
+											</p>
+											<div class="infog">
+												<img src="https://geofferdean.github.io/infographic.svg" class="infog"alt="">
+											</div>
+										</div>
+										<div class="child slide_3 bubble_nest_2">
+											<h3>Iteration</h3>
+											<img src="https://geofferdean.github.io/bubblenest.svg" alt="">
+											<h4>Nesting Bubble Chart:<br>All Souls Aboard</h4>
+											<div class="row supp">
+												<img src="https://geofferdean.github.io/bubblenest2.svg"class="supp" alt="">
+												<img src="https://geofferdean.github.io/bubblenest3.svg"class="supp" alt="">
+											</div>
+										</div>
+										<div class="child slide_3">
+											<p>In attempts to visualize these data with a standard bubble chart, I wanted to be able to compare multiple factors at once, and eventually decided it would be interesting to compare them using the diameters of circles. By doing this, I could put multiple circles inside one larger circle without them overlapping, and show different ratios of a larger set of data. This type of chart was not available to me via any conventional methods, so I had to create each chart “by hand.” The main chart I focused on has one large circle that represents every person on board the ship. Within this circle are two that represent the crew and the passengers. The crew is then separated into men and women, while the passengers are separated into their respective classes. The crew is further separated by survival, while the passenger classes are separated into male and female and then their survival rates.</p>
+											<p>This makes for an interactive chart that represents the 2,217 souls on board while making it possible to see how many females in third class survived, or how many male crew members perished. I made an interactive prototype that highlights different aspects of the data while also showing zoomed in versions of certain bubbles with numbers. This way the viewer can compare the bubbles by their diameter and also see the numerical values they represent.
+											</p>
+										</div>
+										<div class="child slide_3 rose_2">
+											<h3>Nightingale Rose Chart</h3>
+											<img src="https://geofferdean.github.io/rosechart.svg" alt="">
+											<p></p>
+											<p></p>
+										</div>
+										<div class="child slide_3 text-left">
+											<p>I also created a Rose Chart a la Florence Nightingale, which compared the data in a different way, also helping the viewer to compare the breadth of information while looking at one graphic. The largest “petal” once again represents the 2,217 people on board in a dark blue color. Each smaller overlaid petal denotes passengers, survivors, crew, men, women, ad nauseum as a percentage of the total. The following petals concern survivors, crew, passengers, etc, each with their own corresponding relative data. The final six petals show the passenger classes divided into survived and perished men and women; the first three show them in direct proportion to the previous petals, while the latter three are enlarged 2x in order to compare them more easily. </p>
+											<h3>Radial Bar Charts</h3>
+											<p>The radial bar charts are more straightforward. The first bar always takes up 100% of the chart, with each following bar representing a percentage of the first bar. I made 10 different radial bar charts, each comparing different aspects of the data.
+											</p>
+										</div>
+										<div class="child slide_3 radial">
+											<img src="https://geofferdean.github.io/radialchart.svg" alt="">
+
+										</div>
+										<div class="child slide_3">
+											<h3>Conclusion</h3>
+											<p>I learned from this experience that the many different ways of visualizing data are important in order to accurately portray them. I also learned that sometimes there isn’t a way to portray data in the way one might like, and so creating them step by step is necessary. While the nesting bubble chart is a helpful way to look at comparative data, it can also be made very beautiful, and if beauty can be added to something seen so mundane as data analysis, that’s an added bonus.
+												<br>
+											Using the Lean UX method served the project well. In the process, I developed empathy for the Proto-Persona, making charts based on his goals and pain points. I researched and analyzed other methods of organizing data, which enabled me to develop the graphing methods I eventually iterated. It will be exciting to continue to visualize new data using them.
+											</p>
+										</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					</div>
+				</section>
+		</section>
+			<section class="banner parallax_about">
 					<div class="spacer_about">
 						<div class="third">
 							<!--<h2>About Me</h2>-->
@@ -220,7 +333,7 @@
 											<br>
 											This creative spirit, which I cannot say I own or hold or is even within me, led me to pursue a college degree in studio art. After developing a base set of knowledge, I began to use different media together, often in ways for which they weren’t intended. This resulted in art pieces that communicated an aura of introspection, exploration, comfort and human connection.
 											<br>
-											I’m a telephone wire or a coaxial cable who receives the ideas bouncing between the tangible and digital worlds; I’m conveying the information while simultaneously trying to organize it in a way that is useful and makes sense.
+											I’m a telephone wire or a fiber-optic cable who receives the ideas bouncing between the tangible and digital worlds; I’m conveying the information while simultaneously trying to organize it in a way that is useful and makes sense.
 											</p>
 
 										</div>
@@ -385,26 +498,58 @@
 							</div>
 					</div>
 					<section id="contact" class="banner_contact">
-						<div class="row">
-							<div class="col-sm-6 text-center resume">
+						<div class="row_2">
+							<div class="resume2">
+								<div class="resume1">
+										<h2>Resumé</h2>
+										<a href="#"><h3>view .pdf</h3></a>
+										<img src="https://geofferdean.github.io/resumehtmltrue.svg" alt="">
+									</div>
+						</div>
+							<div class="links3">
+								<div class="links2">
+									<div class="boxes">
+										<h2>Contact Me</h2>
+										<a href="#"><h3>digby@geoffreydean.net</h3></a>
+									</div>
+									<div class="boxes">
+										<h2>Media</h2>
+										<a href="https://www.linkedin.com/geoffrey-jensen"><h3>LinkedIn</h3></a>
+										<a href="https://medium.com/@geoffreydeanjensen"><h3>Blog</h3></a>
+										<a href="https://www.instagram.com/geofferdean/"><h3>Instagram</h3></a>
+									</div>
+
+									<div class="boxes">
+										<h2>Other Projects</h2>
+										<a href="https://www.whatsyourfavoritedinosaur.com"><h3>What's Your Favorite Dinosaur</h3></a>
+										<a href="https://www.instagram.com/gratefuldata/"><h3>Grateful Data</h3></a>
+									</div>
+									<div class="boxes">
+										<h4>Thanks so much for stopping by!<br>I hope you like what you've seen.</h4>
+									</div>
+
+								</div>
+							</div>
+							<!--<div class="resume">
 								<h2>Resumé</h2>
+								<a href="#"><h4>view .pdf</h4></a>
 								<img src="https://geofferdean.github.io/resumehtmltrue.svg" alt="">
-								<a href="#"><h3>view .pdf</h3></a>
+
 
 							</div>
 
-								<div class="col-sm-6 text-left links">
-									<h2>Contact Me:</h2>
+								<div class="links2">
+									<h2>Contact Me</h2>
 									<h3>digby@geoffreydean.net</h3>
-									<h2>Media:</h2>
+									<h2>Media</h2>
 									<a href="https://www.linkedin.com/geoffrey-jensen"><h3>LinkedIn</h3></a>
 									<a href="https://medium.com/@geoffreydeanjensen"><h3>Blog</h3></a>
 									<a href="https://www.instagram.com/geofferdean/"><h3>Instagram</h3></a>
-									<h2>Other Projects:</h2>
+									<h2>Other Projects</h2>
 									<a href="https://www.whatsyourfavoritedinosaur.com"><h3>What's Your Favorite Dinosaur</h3></a>
 									<a href="https://www.instagram.com/gratefuldata/"><h3>Grateful Data</h3></a>
 									<h4>Thanks so much for stopping by!<br>I hope you like what you've seen.</h4>
-								</div>
+								</div>-->
 
 
 
@@ -415,44 +560,8 @@
 
 					</section>
 				</section>
-			</section>
+
 	</section>
-		<!--<div class="container_2">
-
-		  <div class="content-wrapper">
-
-		    <div class="child">
-		      <h1>CSS-only horizontal scroll tentative</h1>
-		      <p>The idea is to create an horizontal scroll layout and to allow the user to scroll up/down the mouse to scroll left/right.</p>
-		      <p>So… please scroll <strong>down</strong> with your mouse.</p>
-		    </div>
-
-		    <div class="child">
-		      <h2>The trick</h2>
-		      <p>Rotate -90deg the container, and 90deg its children blocks.</p>
-		      <p>You have to fix container and children dimensions. :(</p>
-		      <p>See CSS for rather correct positioning.</p>
-		    </div>
-
-		    <div class="child">
-		      <h2>Desktop browsers</h2>
-		      <p>Vertical scroll… scrolls. :)</p>
-		      <p>But horizontal scroll (e.g. with a trackpad) doesn’t. :(</p>
-		    </div>
-
-		    <div class="child">
-		      <h2>Mobile browsers</h2>
-		      <p>Only horizontal touchmove works on Chrome. :)</p>
-		      <p>Only vertical touchmove works on Safari and Firefox. :(</p>
-		    </div>
-
-
-		    <div class="child">
-		      <h2>Conclusion</h2>
-		      <p>Without JavaScript: no good idea.</p>
-		    </div>
-
-		  </div>-->
 
 
 
