--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 					</div>
 				</section>
 		</section>
-		<section class="parallax_design">
+		<!--<section class="parallax_design">
 				<div class="spacer_design">
 					<div class="second">
-						<!--<h2>Design</h2>-->
+						<h2>Design</h2>
 					</div>
 				</div>
 
@@ -303,7 +303,7 @@
 					</div>
 					</div>
 				</section>
-		</section>
+		</section>-->
 			<section class="banner parallax_about">
 					<div class="spacer_about">
 						<div class="third">
