--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 	</head>
 
-
+<header>
+</header>
 
 			<div class="home_link fixed-top">
 				<a class="home_link js-scroll-trigger"href="#nav">-</a>
@@ -58,10 +59,12 @@
 
 		<div class="parallax">
 			<div class="fixedlogo">
+
+
 				<img class="logo_small" src="https://geofferdean.github.io/logobackground.svg" alt="">
 				<img class="logo_2" src="https://geofferdean.github.io/logobackground.svg" alt="">
 			</div>
-	<!-- main content -->
+	<!--main content -->
 				<div class="gdj">
 					<h1>GEOFFREY DEAN JENSEN</h1>
 					<h3>UX Designer on a quest to learn the language of the soul.</h3>
@@ -187,10 +190,10 @@
 					</div>
 				</section>
 		</section>
-		<section class="parallax_design">
+		<!--<section class="parallax_design">
 				<div class="spacer_design">
 					<div class="second">
-						<!--<h2>Design</h2>-->
+						
 					</div>
 				</div>
 
@@ -303,7 +306,7 @@
 					</div>
 					</div>
 				</section>
-		</section>
+		</section>-->
 			<section class="banner parallax_about">
 					<div class="spacer_about">
 						<div class="third">
