--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+
 		<title>Geoffrey Dean Jensen</title>
 		<link rel="stylesheet" href="/Users/geoffreyjensen/Documents/_General Assembly/Class Projects/Portfolio/resources/reset.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -23,8 +23,6 @@
 		<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://geofferdean.github.io/resources/style2.css">
-		<!--<link rel="stylesheet" href="/Users/geoffreyjensen/Documents/GitHub/geofferdean.github.io/resources/style2.css">
-	</head>-->
 
 
 <header>
@@ -34,9 +32,9 @@
 
 
 			<div class="home_link fixed-top">
-				<a class="home_link js-scroll-trigger"href="#nav">-</a>
+				<a class="home_link js-scroll-trigger"href="#nav"></a>
 			</div>
-     <!--Navigation -->
+     <!--Navigation -
 		<div id="nav">
 	    <nav class="navbar navbar-expand-lg  fixed-top" id="mainNav">
 	        <div class="collapse navbar-collapse" id="navbarResponsive">
