--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="home_link fixed-top">
 				<a class="home_link js-scroll-trigger"href="#nav"></a>
 			</div>
-     <!--Navigation -
+     <!--Navigation -->
 		<div id="nav">
 	    <nav class="navbar navbar-expand-lg  fixed-top" id="mainNav">
 	        <div class="collapse navbar-collapse" id="navbarResponsive">
